# my-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: handler.hpp  json.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  server.hpp  thread_pool.hpp  thread_pool.tpp
src/: handler.cpp  json.cpp  main.cpp  middleware.cpp  request.cpp  response.cpp  router.cpp  server.cpp  thread_pool.cpp
static/: index.html  script.js  style.css
